--- a/views/index.erb
+++ b/views/index.erb
@@ -1,15 +1,7 @@
-<header>
-  <h1><%= @title %></h1>
-</header>
-
-<div class="container">
-  <div class="row">
-    <div class="col-sm-1">
-      Picture goes here
-    </div>
-    <div class="col-sm-9">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus laboriosam omnis deleniti rem a modi culpa doloribus expedita sit, iure esse nihil debitis officia, voluptate voluptatum quidem totam hic quas!
-    </div>
-    <div class="col-sm-2">A few seconds ago</div>
-  </div>
+<div class="jumbotron">
+  <h1>ARSS2 Aggregator <small>ARSS from Rubies</small></h1>
+  <a href="/feed/http://www.bbc.co.uk/news/uk-34957789#sa-ns_mchannel=rss&amp;ns_source=PublicRSS20-sa"
+     class="btn btn-large btn-primary">
+    BBC Feed
+  </a>
 </div>
