--- a/views/style.scss
+++ b/views/style.scss
@@ -26,7 +26,7 @@ nav img {
 header {
     background: $base-color;
     color: #fff;
-    margin-top: -10px;
+    margin-top: -15px;
     margin-bottom: 20px;
 
     h5 {
@@ -57,6 +57,13 @@ footer {
     small {
         font-size: 80%
     }
+}
+
+article {
+    padding: 10px;
+    margin-bottom: 3px;
+    background: darken($base-color, 10);
+    color: lighten($base-color, 60);
 }
 
 @media (max-width: 992px) {
