--- a/views/feed.erb
+++ b/views/feed.erb
@@ -1,14 +1,15 @@
 <header>
   <div class="container">
     <div class="row">
-      <div class="col-sm-2">
+      <div class="col-sm-1">
         <% if @info[:image_url] %>
           <img src="<%= @info[:image_url] %>" alt="" />
         <% end %>
       </div>
-      <div class="col-sm-8">
-        <h1><%= @title %></h1>
-        <h5><%= @info[:description] %></h5>
+      <div class="col-sm-10">
+        <h1><%= linkify(@title) %></h1>
+        <h5><%= linkify(@info[:description]) %></h5>
+        <h6><%= linkify(@info[:copyright]) %></h6>
       </div>
     </div>
   </div>
@@ -19,20 +20,25 @@
     <% @items.each do |item| %>
       <article>
         <div class="row">
-          <div class="col-sm-1">
+          <div class="col-sm-2">
             <% if item.key? :image_url %>
-              <img src="<%= item[:image_url] %>" alt="">
+              <a href="<%= item[:link] %>" target="_blank">
+                <img src="<%= item[:image_url] %>" alt="">
+              </a>
             <% end %>
           </div>
-          <div class="col-sm-9">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus laboriosam omnis deleniti rem a modi culpa doloribus expedita sit, iure esse nihil debitis officia, voluptate voluptatum quidem totam hic quas!
+          <div class="col-sm-8">
+            <a href="<%= item[:link] %>" target="_blank">
+              <h4><%= item[:title] %></h4>
+            </a>
+            <p><%= linkify(item[:description]) %></p>
           </div>
-          <div class="col-sm-2"><%= item[:time_ago] %></div>
+          <div class="col-sm-2 humantime"><%= item[:time_ago] %></div>
         </div>
       </article>
     <% end %>
   <% else %>
-    <h2 class="text-center">No feed items to display</h2>
+    <h3 class="text-center">No feed items to display</h3>
   <% end %>
 </div>
 
