--- a/views/style.scss
+++ b/views/style.scss
@@ -7,6 +7,9 @@ $footer-text: #777;
 $highlight: #ffff88;
 $date-highlight: #000080;
 
+$header-link: lighten(adjust-color($base-color, $red: 120), 20);
+$article-link: lighten(adjust-color($base-color, $blue: 120), 10);
+
 body {
     background: lighten($base-color, 70);
 }
@@ -29,12 +32,20 @@ header {
     margin-top: -15px;
     margin-bottom: 20px;
 
-    h5 {
+    h5, h6 {
         text-align: center;
     }
 
     img {
         margin-top: 10px;
+    }
+
+    a {
+        color: $header-link;
+
+        &:hover {
+            color: lighten($header-link, 20);
+        }
     }
 }
 
@@ -64,6 +75,22 @@ article {
     margin-bottom: 3px;
     background: darken($base-color, 10);
     color: lighten($base-color, 60);
+
+    h4 {
+        margin-top: 0;
+        margin-left: 2em;
+    }
+    a {
+        color: $article-link;
+
+        &:hover {
+            color: lighten($article-link, 20);
+        }
+    }
+
+    .humantime {
+        text-align: right;
+    }
 }
 
 @media (max-width: 992px) {
