Made copyright text optional

--- a/views/style.scss
+++ b/views/style.scss
@@ -31,13 +31,10 @@ header {
     color: #fff;
     margin-top: -15px;
     margin-bottom: 20px;
+    padding: 10px;
 
     h5, h6 {
         text-align: center;
-    }
-
-    img {
-        margin-top: 10px;
     }
 
     a {
