--- a/views/feed.erb
+++ b/views/feed.erb
@@ -9,7 +9,9 @@
       <div class="col-sm-10">
         <h1><%= linkify(@title) %></h1>
         <h5><%= linkify(@info[:description]) %></h5>
-        <h6><%= linkify(@info[:copyright]) %></h6>
+        <% if @info[:copyright] %>
+          <h6><%= linkify(@info[:copyright]) %></h6>
+        <% end %>
       </div>
     </div>
   </div>
