Add Github nav and image alt.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ARSS2 Aggregator <%= @title ? "- #{@title}" : "" %></title>
+  <title><%= "#{@title} - " if @title %>ARSS2 Aggregator</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
@@ -31,7 +31,7 @@
           <li><a href="http://immense-countdown.herokuapp.com">Countdown</a></li>
           <li><a href="http://ha-roadworks.herokuapp.com">Roadworks</a></li>
           <li><a href="https://twitter.com/ReallyBigShoeUK">Twitter</a></li>
-          <li><a href="https://github.com/JulianNicholls"></a></li>
+          <li><a href="https://github.com/JulianNicholls">Github</a></li>
         </ul>
       </div>
     </div>
@@ -50,7 +50,7 @@
             <li><a href="http://immense-countdown.herokuapp.com">Countdown</a></li>
             <li><a href="http://ha-roadworks.herokuapp.com">Roadworks</a></li>
             <li><a href="https://twitter.com/ReallyBigShoeUK">Twitter</a></li>
-            <li><a href="https://github.com/JulianNicholls"></a></li>
+            <li><a href="https://github.com/JulianNicholls">Github</a></li>
           </ul>
         </nav>
       </div>
