--- a/views/feed.erb
+++ b/views/feed.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-1">
         <% if @info[:image_url] %>
-          <img src="<%= @info[:image_url] %>" alt="" />
+          <img src="<%= @info[:image_url] %>" alt="<%= @info[:image_caption] %>" />
         <% end %>
       </div>
       <div class="col-sm-10">
