--- a/views/feed.erb
+++ b/views/feed.erb
@@ -35,7 +35,7 @@
             </a>
             <p><%= linkify(item[:description]) %></p>
           </div>
-          <div class="col-sm-2 humantime"><%= item[:time_ago] %></div>
+          <div data-stamp="<%= item[:timestamp] %>" class="col-sm-2 humantime"><%= item[:time_ago] %></div>
         </div>
       </article>
     <% end %>
