--- a/views/layout.erb
+++ b/views/layout.erb
@@ -73,5 +73,6 @@
 
   <script src="http://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="/js/rss-reader.js"></script>
 </body>
 </html>
