Move header up and article title left

--- a/views/style.scss
+++ b/views/style.scss
@@ -36,7 +36,7 @@ nav img {
 header {
     background: $header-bg;
     color: black;
-    margin-top: -18px;
+    margin-top: -19px;
     margin-bottom: 20px;
     padding: 10px;
 
@@ -61,7 +61,7 @@ article {
 
     h4 {
         margin-top: 0;
-        margin-left: 0.5em;
+        margin-left: 0;
     }
 
     a, a:visited {
