--- a/views/feed.erb
+++ b/views/feed.erb
@@ -19,7 +19,7 @@
     <div class="row">
       <div class="col-sm-3 col-sm-offset-9">
         <select name="feeds" id="feeds" class="pull-right">
-        <% feeds.each do |feed| %>
+        <% feeds.sort_by {|feed| feed[:name]}.each do |feed| %>
           <option value="<%= feed[:url] %>" <%= 'selected' if feed[:url] == @address %>><%= feed[:name] %></option>
         <% end %>
         </select>
