Add image-col class to image column
This is to facilitate resizing the images after they are loaded.

--- a/views/feed.erb
+++ b/views/feed.erb
@@ -33,7 +33,7 @@
     <% @items.each do |item| %>
       <article>
         <div class="row">
-          <div class="col-sm-2">
+          <div class="col-sm-2 image-col">
             <% if item.key? :image_url %>
               <a href="<%= item[:link] %>" target="_blank">
                 <img src="<%= item[:image_url] %>" alt="">
