Update human time messages and times.
Correct BBC news feed address in home page.

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,9 @@
-<div class="jumbotron">
-  <h1>ARSS2 Aggregator <small>ARSS from Rubies</small></h1>
-  <a href="/feed/http://www.bbc.co.uk/news/uk-34957789#sa-ns_mchannel=rss&amp;ns_source=PublicRSS20-sa"
-     class="btn btn-large btn-primary">
-    BBC Feed
-  </a>
+<div class="container">
+  <div class="jumbotron">
+    <h1>ARSS2 Aggregator <small>ARSS from Rubies</small></h1>
+    <a href="/feed/http://feeds.bbci.co.uk/news/rss.xml"
+       class="btn btn-large btn-primary">
+      BBC Feed
+    </a>
+  </div>
 </div>
