--- a/views/feed.erb
+++ b/views/feed.erb
@@ -7,7 +7,7 @@
         <% end %>
       </div>
       <div class="col-sm-10">
-        <h1><%= linkify(@title) %></h1>
+        <h1><%= linkify(page_title) %></h1>
         <% if @info[:description] %>
           <h5><%= linkify(@info[:description]) %></h5>
         <% end %>
