--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,8 +28,8 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="http://immense-countdown.herokuapp.com">Countdown</a></li>
-          <li><a href="http://ha-roadworks.herokuapp.com">Roadworks</a></li>
+          <li><a href="https://immense-countdown.herokuapp.com">Countdown</a></li>
+          <li><a href="https://ha-roadworks.herokuapp.com">Roadworks</a></li>
           <li><a href="https://twitter.com/ReallyBigShoeUK">Twitter</a></li>
           <li><a href="https://github.com/JulianNicholls">Github</a></li>
         </ul>
@@ -47,8 +47,8 @@
       <div class="col-sm-11">
         <nav>
           <ul>
-            <li><a href="http://immense-countdown.herokuapp.com">Countdown</a></li>
-            <li><a href="http://ha-roadworks.herokuapp.com">Roadworks</a></li>
+            <li><a href="https://immense-countdown.herokuapp.com">Countdown</a></li>
+            <li><a href="https://ha-roadworks.herokuapp.com">Roadworks</a></li>
             <li><a href="https://twitter.com/ReallyBigShoeUK">Twitter</a></li>
             <li><a href="https://github.com/JulianNicholls">Github</a></li>
           </ul>
@@ -61,7 +61,7 @@
           <p>
             <small>
               Created on a Mac with
-              <a href="http://www.sublimetext.com">Sublime Text</a>,
+              <a href="https://www.sublimetext.com">Sublime Text</a>,
               <a href="https://www.ruby-lang.org">Ruby</a>, and
               <a href="http://sinatrarb.com">Sinatra</a>
             </small>
@@ -71,7 +71,7 @@
     </div>
   </footer>
 
-  <script src="//code.jquery.com/jquery.js"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="/js/rss-reader.js"></script>
 </body>
