width is now set explicitly for all item images.
resize_images() is no longer necessary.

--- a/views/feed.erb
+++ b/views/feed.erb
@@ -37,7 +37,7 @@
             <div class="col-sm-2 image-col">
               <% if item.key? :image_url %>
                 <a href="<%= item[:link] %>" target="_blank">
-                  <img src="<%= item[:image_url] %>" alt="">
+                  <img src="<%= item[:image_url] %>" width="150" alt="">
                 </a>
               <% end %>
             </div>
