--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title><%= "#{page_title} - " if page_title %>ARSS2 Aggregator</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-  <link href="/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
   <nav class="navbar navbar-default">
@@ -22,7 +22,7 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
         </button>
-        <a href="/" class="navbar-brand">
+        <a href="http://reallybigshoe.co.uk" class="navbar-brand">
           <img src="/RBSLogo2_small.png" alt="RBS Logo">
         </a>
       </div>
@@ -72,7 +72,7 @@
   </footer>
 
   <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="/js/rss-reader.js"></script>
 </body>
 </html>
