--- a/views/feed.erb
+++ b/views/feed.erb
@@ -17,12 +17,17 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-3 col-sm-offset-9">
+      <div class="col-sm-3 col-sm-offset-8">
         <select name="feeds" id="feeds" class="pull-right">
         <% feeds.sort_by {|feed| feed[:name]}.each do |feed| %>
           <option value="<%= feed[:url] %>" <%= 'selected' if feed[:url] == @address %>><%= feed[:name] %></option>
         <% end %>
         </select>
+      </div>
+      <div class="col-sm-1">
+        <button id="reload" class="btn btn-sm btn-primary">
+          <i class="fa fa-undo" aria-hidden="true"></i>
+        </button>
       </div>
     </div>
   </div>
