--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,7 +40,7 @@
   <%= yield %>
 
   <footer>
-    <div class="row">
+    <div class="container-fluid">
       <div class="col-sm-1">
         <img src="/RBSLogo2_small.png" alt="RBS Small Logo">
       </div>
