--- a/views/style.scss
+++ b/views/style.scss
@@ -24,10 +24,6 @@ body {
   min-height: 1200px;
 }
 
-h1 {
-  text-align: center;
-}
-
 nav img {
   margin-top: -8px;
 }
@@ -39,13 +35,29 @@ nav img {
 header {
   background: $header-bg;
   color: white;
-  margin-top: -19px;
   margin-bottom: 20px;
+  margin-top: -19px;
   padding: 10px;
 
-  h5,
+  h1,
+  h2,
   h6 {
+    margin: 0 0 0.5em 0;
     text-align: center;
+  }
+
+  h1 {
+    font-size: 2.4em;
+  }
+
+  h2 {
+    font-size: 1.8em;
+  }
+
+  h6 {
+    color: #e0e0e0;
+    font-size: 0.9em;
+    line-height: 1.2em;
   }
 
   a {
@@ -63,14 +75,15 @@ header {
 }
 
 article {
-  padding: 10px;
-  margin-bottom: 3px;
   background: $article-bg;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.24), 0 1px 2px rgba(0, 0, 0, 0.48);
   color: white;
+  margin-bottom: 6px;
+  padding: 10px;
 
   h4 {
-    margin-top: 0;
     margin-left: 0;
+    margin-top: 0;
   }
 
   a,
@@ -83,17 +96,18 @@ article {
   }
 
   .humantime {
+    color: #e0e0e0;
+    font-size: 0.9em;
     text-align: right;
-    font-size: 85%;
   }
 }
 
 footer {
+  background-color: $footer-bg;
+  border-top: 1px solid $footer-border;
+  color: $footer-text;
   margin-top: 20px;
   padding: 10px 0 0 10px;
-  border-top: 1px solid $footer-border;
-  background-color: $footer-bg;
-  color: $footer-text;
 
   nav ul {
     list-style-type: none;
